# Adafruit_Blinka

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  README.rst.license  adafruit_blinka.py  list.sh  odroidm1.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  new_board_request.md
.github/workflows/: build.yml  release-drafter.yml  release.yml
LICENSES/: BSD-3-Clause.txt
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: analog_in.py  bbb_digitalio.py  digital_input.py  generic_aio.py  generic_dio.py  generic_i2c.py  index.md  mcp2221_first_busio_i2c.py  mcp2221_multiple_busio_i2c.py  mcp2221_single_busio_i2c.py  mcps_busio_i2c.py  pb_digitalio.py  pi_busio_i2c.py  pi_busio_spi.py  pi_digitalio.py  pi_i2c.py  piblinka.py  usb_hid_keyboard.py
luxonis_example/: multipleBoards.py  muxerExample.py
notes/: index.md
python/: agnostic.py  unittest.mpy  unittest.py  upload_esp8266_put.sh  upload_feather_huzzah_circuitpython_put.sh  upload_feather_huzzah_micropython_put.sh  upload_feather_m0_watch.py  upload_feather_sync.py  upload_pyboard_watch.py
python/bitbangio/: __init__.py
python/board/: __init__.py  feather_huzzah.py  nodemcu.py  pyboard.py
python/boards/: esp8266.py  pyboard.py
python/busio/: __init__.py
python/digitalio/: __init__.py
python/mcp/: __init__.py
python/microcontroller/: __init__.py  esp8266.py  pin.py  stm32.py
python/microcontroller/esp8266/: __init__.py  pin.py
python/microcontroller/stm32/: __init__.py
python/testing/: __init__.py  embedded.py  mcp.py  microcontroller.py
python/testing/board/: __init__.py
python/testing/microcontroller/: __init__.py
python/testing/platform/: __init__.py  all.py  embedded.py
python/testing/profiling/: __init__.py
scripts/: check_imports_paths.py
src/: .gitignore  __version__.py  _bleio.py  _typing.py  analogio.py  bitbangio.py  board.py  board_imports.json  busio.py  circuitpython_typing.py  digitalio.py  keypad.py  microcontroller.py  microcontroller_imports.json  micropython.py  neopixel_write.py  onewireio.py  pulseio.py  pwmio.py  rainbowio.py  rotaryio.py  specific_board.py  usb_hid.py
src/adafruit_blinka/: __init__.py  agnostic.py  constants.py  importing.py  time.py
src/adafruit_blinka/agnostic/: Platform.py  __init__.py  time.py
src/adafruit_blinka/board/: OLIMEX_LIME2.py  beaglebone_black.py  beaglebone_green_wireless.py  beaglebone_pocketbeagle.py  binho_nova.py  clockworkcpi3.py  coral_dev_board.py  coral_dev_board_mini.py  coral_edge_tpu.py  dragonboard_410c.py  giantboard.py  (+59 more)
src/microcontroller/: __init__.py  _pin.py  pin.py
src/micropython/: __init__.py
src/micropython-stubs/: __init__.pyi  micropython.pyi
test/: stubtest.py
test/scripts/: upload_feather_huzzah_circuitpython_put.sh  upload_feather_huzzah_micropython_put.sh  upload_pyboard_micropython_cp.sh  watch_feather_m0.py  watch_pyboard.py
test/src/: unittest.py
tests/: test_generic_agnostic_board_analogio.py  test_generic_agnostic_board_digitalio.py  test_generic_agnostic_board_i2c.py  test_generic_linux_spi.py  test_load_settings_toml.py
(+380 files in other folders)
